[tool.poetry]
name = "csv-maker"
version = "0.1.0"
description = ""
authors = ["Dean Cochran <dean.cochran@ttpsolutions.com>"]
readme = "README.md"
packages = [{include = "csv_maker"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.2.1"
faker = "^23.3.0"
jupyter-contrib-nbextensions = "^0.7.0"
notebook = "6.4.12"
jupyter-nbextensions-configurator = "^0.6.3"
jupyter-server = "^2.12.5"
jupyterlab = "^4.1.2"
python-lsp-server = {extras = ["all"], version = "^1.10.0"}
traitlets = "5.9.0"
jupyterlab-lsp = "^5.1.0"
jupyterlab-vim = "^4.1.3"
jupyterlab-code-formatter = "^2.2.1"
black = "^24.2.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
